# traylang

./: .travis.yml  CMakeLists.txt  README.md  TrayLangConfig.cmake.in  TrayLangConfigVersion.cmake.in
examples/: ifexample.tr
lib/: CMakeLists.txt
lib/grammar/: traylang.l  traylang.y
lib/include/: ast-print.h  ast.h  interpreter.h  interpreter_funcs.h  interpreter_interpret.h  object.h  object_funcs.h  parser.h  traylang.h  traylang_ffi.h
lib/src/: ast-print.c  ast.c  interpreter_funcs.c  interpreter_gc.c  interpreter_interpret.c  object_funcs.c  traylang.c  traylang_ffi.c
lib/src/stdlib/: list.c  math.c  print.c
main/: CMakeLists.txt
main/src/: main.c
tests/: CMakeLists.txt
tests/src/: test_ast.c  test_interpreter_gc.c  test_traylang.c
tests/src/traylang/: test_interpreter.c
